java 5: new Integer(int) -> Integer.valueOf(int)
git-svn-id: https://svn.apache.org/repos/asf/cayenne/main/trunk@605850 13f79535-47bb-0310-9956-ffa450edef68